Working request from Maps API.

--- a/testUserLocation.html
+++ b/testUserLocation.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script src="getUserLocation.js"></script>
-</body>
+<html>
+  <head>
+    <title>Simple Map</title>
+    <script src="mapsAPI.js"></script>
+    <script type="module" src="index.js"></script>
+  </head>
+
+
+  <body>
+
+    <h3> Google Maps API Import</h3>
+    <div id="map" style="height:99%">We cant get your location automatically. Please enter it manually:</div>
+
+  </body>
 </html>
