final changes for transitStops

--- a/Backend/public_html/index.html
+++ b/Backend/public_html/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>Calgary Transit Routes</h1>
+    <h1>Calgary Transit Routes & Stops</h1>
     <div id="app"></div>
 
     <script type="module" src="app.js"></script>
