autosuggest + places api active

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -28,6 +28,11 @@
     <title>Welcome to STOPify</title>
   </head>
   <body>
+    <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4u5WHz6-4ldEWPwyrjjjhhtkOwVm1lyo&libraries=places"
+    async
+    defer
+  ></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
